kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-deployment
  labels:
    app: sso-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-grpc
  template:
    metadata:
      labels:
        app: sso-grpc
    spec:
      containers:
      - name: sso-grpc
        image: senkevichs/grpc-sso:1.0.0
        ports:
        - containerPort: 44044
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
